--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
 
 <slide class="" id="slide-3" style="background:;">
   <article data-timings="">
-    <pre><code>## Error in library(panda): there is no package called &#39;panda&#39;
+    <pre><code>## Loading required package: panda
+</code></pre>
+
+<pre><code>## Warning in library(package, lib.loc = lib.loc, character.only = TRUE,
+## logical.return = TRUE, : there is no package called &#39;panda&#39;
 </code></pre>
 
   </article>
