--- a/index.html
+++ b/index.html
@@ -65,33 +65,22 @@
 
 <slide class="" id="slide-3" style="background:;">
   <article data-timings="">
-    
+    <!-- html table generated in R 3.1.0 by xtable 1.7-4 package -->
+
+<!-- Sat Mar 21 21:46:40 2015 -->
+
+<table border=1>
+<tr> <th>  </th> <th> attributes </th> <th> Pearson.r </th> <th> Spearman.s.r </th>  </tr>
+  <tr> <td align="right"> 1 </td> <td> trend </td> <td> linear </td> <td> monotonic </td> </tr>
+  <tr> <td align="right"> 2 </td> <td> sampling distribution </td> <td> normal </td> <td> non normal </td> </tr>
+  <tr> <td align="right"> 3 </td> <td> data </td> <td> interval </td> <td> non parametric </td> </tr>
+   </table>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="" id="slide-4" style="background:;">
-  <article data-timings="">
-    <pre><code> attributes        Pearson.r   Spearman.s.r 
-</code></pre>
-
-<hr>
-
-<pre><code>    trend           linear      monotonic   
-</code></pre>
-
-<p>sampling distribution   normal      non normal  </p>
-
-<pre><code>    data           interval   non parametric
-</code></pre>
-
-<hr>
-
-  </article>
-  <!-- Presenter Notes -->
-</slide>
-
-<slide class="" id="slide-5" style="background:;">
   <article data-timings="">
     
   </article>
@@ -124,12 +113,6 @@
       <a href="#" target="_self" rel='tooltip' 
         data-slide=4 title=''>
          4
-      </a>
-    </li>
-    <li>
-      <a href="#" target="_self" rel='tooltip' 
-        data-slide=5 title=''>
-         5
       </a>
     </li>
   </ul>
