updated googleViz use

--- a/index.html
+++ b/index.html
@@ -71,26 +71,18 @@
     <h2>Input and Output variables</h2>
   </hgroup>
   <article data-timings="">
-    <pre><code class="r">#print(xtable(X[1:3,1:3]))
-pandoc.table(X[1:3,1:3])
+    <pre><code>##              name          Parent
+## 1 Input Data Type            &lt;NA&gt;
+## 2        Interval Input Data Type
 </code></pre>
 
-  </article>
-  <!-- Presenter Notes -->
-</slide>
-
-<slide class="" id="slide-4" style="background:;">
-  <article data-timings="">
-    <p>Data.type         Interval            Catagorical    </p>
-
-<hr>
-
-<pre><code>NA      Correlation Regression Logistic Regression
+<pre><code>##              name          Parent
+## 1 Input Data Type            &lt;NA&gt;
+## 2     Categorical Input Data Type
 </code></pre>
 
-<p>Interval    t-test z-test ANOVA       Chi-square     </p>
-
-<h2>Categorical           NA                   NA         </h2>
+<p>names&lt;-gvisOrgChart(df,options=list(width=600,height=250,size=&#39;large&#39;, allowCollapse=TRUE)
+plot(names)</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -116,12 +108,6 @@ pandoc.table(X[1:3,1:3])
       <a href="#" target="_self" rel='tooltip' 
         data-slide=3 title='Input and Output variables'>
          3
-      </a>
-    </li>
-    <li>
-      <a href="#" target="_self" rel='tooltip' 
-        data-slide=4 title=''>
-         4
       </a>
     </li>
   </ul>
