--- a/index.html
+++ b/index.html
@@ -81,8 +81,11 @@
 ## 2     Categorical Input Data Type
 </code></pre>
 
-<p>names&lt;-gvisOrgChart(df,options=list(width=600,height=250,size=&#39;large&#39;, allowCollapse=TRUE)
-plot(names)</p>
+<pre><code>## Error in eval(expr, envir, enclos): could not find function &quot;gvisOrgChart&quot;
+</code></pre>
+
+<pre><code>## Error in curve(expr = x, from = from, to = to, xlim = xlim, ylab = ylab, : &#39;expr&#39; did not evaluate to an object of length &#39;n&#39;
+</code></pre>
 
   </article>
   <!-- Presenter Notes -->
